apps/netbox/service-diode.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: diode-server
  namespace: netbox
  labels:
    app: netbox
    component: diode-server
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: grpc
  selector:
    app: netbox
