apps/netbox/ingressroute-netbox.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbox
  namespace: netbox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbox.xrs444.net`)
      kind: Rule
      services:
        - name: netbox
          port: 8080
  tls:
    certResolver: letsencrypt
